Bug#31671 - Explicitly support Row based replication.